objects/Sandbox_Refresh_Activities_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <description>Text field having value as either true or false to perform activity.</description>
        <label>Activity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Text field to hold recipients email id separated by semi colon.</description>
        <label>Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>Text field to hold field API name.</description>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Text fied to hold object API name.</description>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sandbox Refresh Activities Configuration</label>
    <pluralLabel>Sandbox Refresh ActivitiesConfigurations</pluralLabel>
</CustomObject>